aligned the cards correctly on the home page

--- a/public/home.css
+++ b/public/home.css
@@ -40,6 +40,19 @@ div.container-fluid a.navbar-brand {
   color: white;
 }
 
+div.col-5 .card {
+  min-width: 40%;
+  max-width: 90%;
+  min-height: 100%;
+  margin: auto;
+}
+
+div.col-2 {
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+}
+
 div ul.navbar-nav {
   width: 100%;
   justify-content: flex-end;
